Add elasticsearch for users
