# FinalWork2-Microservices/user/src/infrastructure/presentation/swagger.json
@@ -38,6 +38,11 @@
             "name": "fullName",
             "in": "query",
             "type": "string"
+          },
+          {
+            "name": "search",
+            "in": "query",
+            "type": "string"
           }
         ],
         "responses": {
